fixed footer icons and alignment

--- a/src/components/ContentFooterV2/styles.module.scss
+++ b/src/components/ContentFooterV2/styles.module.scss
@@ -293,6 +293,8 @@
       width: 100%;
       max-width: 160px;
       height: 60px;
+      display: flex;
+      justify-content: center;
 
       img {
         height: 35px;
